--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ h1 {
 .Pics {
   -webkit-box-shadow: 5px 5px 5px #111;
           box-shadow: 5px 5px 5px #111;  
+    height: 150px;
+    width: 150px;
   
 }
 .img, .PicShadwow {
