--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.typewriter p:first-child {
+.typewriter: second-child {
   color: #fff;
   font-family: monospace;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
@@ -8,7 +8,7 @@
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(30, end),
-    blink-caret .5s step-end infinite;
+    blink-caret 1s step-end infinite;
 }
 
 /* The typing effect */
@@ -20,7 +20,7 @@
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange }
+  50% { border-color: #3d7e9a }
 }
 
 h1 {
