--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.typewriter: second-child {
+.typewriter h1 {
   color: #fff;
   font-family: monospace;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
