--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.typewriter h1 {
+.typewriter {
   color: #fff;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
